# TU-Wien-Systemnahes-Programmieren-Exercises

./: CMakeLists.txt  LICENSE  README.md  SNIPPETS.md
1/exercise1/: CMakeLists.txt  CMakePresets.json  README.md  SNIPPETS.md
1/exercise1/cmake/presets/: linux-debug-asan.json  linux-debug.json  linux-release.json
1/exercise1/output/: task1_output_c.txt  task1_output_cpp.txt  task1_output_python.txt
1/exercise1/src/: task1.test.c  task1.test.cpp  task1.test.py  task2.main.cpp  task3.cpp  task3.hpp  task3.test.cpp
2/2/exercise2/: CMakePresets.json  README.md  SNIPPETS.md
2/2/exercise2/cmake/presets/: linux-debug-asan.json
2/2/exercise2/src/: task2.test.cpp  task3.test.cpp
2/My-Git/exercise2/: CMakeLists.txt  README.md
2/My-Git/exercise2/cmake/presets/: linux-release.json
2/exercise2/: README.md
2/exercise2/cmake/presets/: linux-debug.json
2/exercise2/src/: task1.main.cpp  task2.cpp  task2.hpp  task3.cpp  task3.hpp
3/3/exercise3/: CMakeLists.txt
3/3/exercise3/cmake/presets/: linux-debug-asan.json
3/3/exercise3/include/iue-msh/: triangles.hpp
3/3/exercise3/include/iue-num/: numerics.h
3/3/exercise3/include/iue-po/: cpo.h
3/3/exercise3/include/iue-rnd/: random.hpp  random.test.cpp
3/3/exercise3/include/iue-svg/: render.hpp  tree.hpp  tree.test.cpp
3/3/exercise3/output/: test.task3.cos.csv
4/: CMakeLists.txt  README.md  SNIPPETS.md
4/include/: README.md
4/include/iue-io/: ccsv.h  ccsv.test.c  csv.hpp  csv.test.cpp
4/include/iue-msh/: triangles.hpp  triangles.test.cpp
4/include/iue-num/: numerics.h  numerics.hpp  numerics.test.c  numerics.test.cpp
4/include/iue-po/: cpo.h  cpo.test.c
4/include/iue-rnd/: random.hpp  random.test.cpp
4/include/iue-svg/: render.hpp  render.test.cpp  tags.hpp  tags.test.cpp  tree.hpp  tree.test.cpp
4/presets/: linux-debug-asan.json  linux-debug.json  linux-release.json
4/src/: task1.main.cpp  task2.cpp  task2.hpp  task2.misc.cpp  task2.misc.hpp  task2.test.cpp  task3.cpp  task3.hpp  task3.misc.cpp  task3.misc.hpp  task3.test.cpp
cmake/presets/: linux-debug-asan.json  linux-debug.json  linux-release.json
include/: README.md
include/iue-io/: ccsv.h  ccsv.test.c  csv.hpp  csv.test.cpp
include/iue-msh/: triangles.hpp  triangles.test.cpp
include/iue-num/: numerics.hpp  numerics.test.c  numerics.test.cpp
include/iue-po/: cpo.test.c
include/iue-rnd/: random.hpp  random.test.cpp
include/iue-svg/: render.test.cpp  tags.hpp  tags.test.cpp  tree.hpp  tree.test.cpp
src/: task1.main.cpp  task2.cpp  task2.hpp  task2.misc.cpp  task2.misc.hpp  task2.test.cpp  task3.cpp  task3.hpp  task3.misc.cpp  task3.misc.hpp  task3.test.cpp
